src/components/app-root/app-root.css
main {
  padding-left: var(--space-s);
  padding-right: var(--space-s);
}

.app-header .app-header__custom-logo {
  height: var(--logo-height);
}

@media screen and (min-width: 768px) {
  main {
    min-height: calc(100vh - var(--header-height-desktop) - var(--footer-height-desktop));
    display: flex;
    align-items: center;
    flex-direction: column;
    padding-top: calc(var(--space-s) * 2);
  }
}

